--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>Vite App</title>
-=======
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KETCHUP NOW</title>
->>>>>>> 596c32a0974d74f449533d4fcaaed384fdd886f3
   </head>
   <body>
     <div id="app"></div>
